🐜 Fixed Do not disturb hidden by notifications

--- a/src/sass/X/system_popups/notification_panel.sass
+++ b/src/sass/X/system_popups/notification_panel.sass
@@ -21,6 +21,8 @@ notification_panel_container
     > notifications_container
         border-right: 1px solid var(--main-color-lighter)
         flex: 2 1 0
+        height: calc(100% - 30px )
+        margin-bottom: 50px
         > notification
             display: flex
             flex-flow: column nowrap
